# MineruPrune

./: .gitignore  README.md  app.py  extract_loss.py  pyproject.toml
data_recipe/: box.yaml  box0422.yaml  box0424.yaml  box0425.yaml  eval1.json  eval20.json  evalset.yaml  evalset1.yaml  evalset250.yaml  evalset_all_500.yaml  evalset_en4k.yaml  evalset_zh6k.yaml  select_subset.py  selected_subset_250.json  selected_subset_all_500.json  stage1.yaml  stage2_all.yaml  stage2_boxing.yaml  stage2_continue.yaml  stage2_newspapers.yaml  stage2_xyz-notes.yaml  stage3.yaml  test.yaml  tmp.md
data_recipe/lz/: stage1-2.yaml  stage1.yaml  stage1_all.yaml  stage2.yaml  stage2_continue_boxing-1.yaml  stage2_continue_boxing-2.yaml  stage2_continue_boxing.yaml  stage2_exam-table.yaml  stage2_formula.yaml  stage2_notes.yaml  stage2_table.yaml
llava/: __init__.py  calculate_similarity.py  constants.py  conversation.py  mm_utils.py
llava/eval/: eval_demo.py  eval_got.py  eval_mixtral.py  eval_ocean_ocr.py  eval_omnidocbench.py  eval_omnidocbench_repeat.py
llava/model/: __init__.py  builder.py  composer_llama.py  l0_module.py  llava_arch.py  modeling_qwen2_mask.py  modeling_qwen2_pruning.py  my_output_utils.py  myhook.py  post_pruning_processing.py  statekeys.md  test.py  test_prune.py  test_prune2.py  test_prune3.py  utils.py
llava/serve/: controller.py  gradio_web_server.py  header.html  model_worker.py  start.sh
llava/train/: llava_trainer.py  train copy.py  train.py
scripts/bash/: debug.sh  prune.sh  prune0415.sh  (+19 more)
utils/: check.py  format_note.py  merge_stage1-2.py
(+55 files in other folders)
